@@ -222,6 +222,9 @@ domibus.sender.certificate.subject.check=false
 #Accepted Format for MessageId (Default value, based on RFC2822 [CORE 5.2.2.1]: ^[\\x20-\\x7E]*$ )
 #domibus.sendMessage.messageIdPattern=^[\\x20-\\x7E]*$
 
+#Validate PartyInfo From/To initiator and responder roles. This property helps maintaining backwards compatibility. It is recommended to be enabled. By default enabled.
+#domibus.partyinfo.roles.validation.enabled=true
+
 # ---------------------------------- Dispatcher --------------------------------
 
 #Timeout values for communication between the access points
